Update about.html links and restructure trash.html for improved layout and content presentation

--- a/about.html
+++ b/about.html
@@ -554,9 +554,9 @@ g:hover .image-mapper-shape {
       <div class="page6">
         <a href="./gvp.html?page=Institute_Distinctiveness" class="link-box"> Institute Distinctiveness</a>
         <a href="./gvp.html?page=Genesis_of_GVP" class="link-box"> Genesis of GVP </a>
-        <a href="" class="link-box"> Governing Body</a>
-        <a href="" class="link-box"> Administration</a>
-        <a href="" class="link-box"> Academic Council</a>
+        <a href=" " class="link-box"> Governing Body</a>
+        <a href="./Adminstration/administration.html" class="link-box"> Administration</a>
+        <a href="./gvp.html?page=Academic_Council" class="link-box"> Academic Council</a>
         <a href="" class="link-box"> Strategic Plan</a>
         <a href="" class="link-box"> Organizational Structure</a>
         <a href="" class="link-box"> Governance and Policies</a>
