--- a/gvp.html
+++ b/gvp.html
@@ -238,7 +238,439 @@
     <p>Overcoming all these problems have provided valuable insights to the students about the living conditions and problems of the people residing in tribal areas. This has enhanced their sensitivity to social issues and instilled social responsiveness. The practice has enhanced students’ behavior pattern by fostering a sense of community responsibility and has contributed to character building and lifelong commitment to learning. We consider this as an essential step on the path to Vikasit Bharath.</p>
 </main>
 `;
-            } else {
+            }
+            else if(page === 'Academic_Council'){
+                contentDiv.innerHTML = `     <title>Members of Academic Council</title>
+    <style>
+        .mac {
+            color: #22316c;
+            /* font-family: Arial, sans-serif; */
+            line-height: 1.6;
+            padding: 20px;
+        }
+        .mac{
+        h1, h2, h3 {
+            color: #22316c;
+        }
+               table{
+        width: 100%;
+        max-width: 1200px;
+        border-collapse: collapse;
+        background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
+        border-radius: 15px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+        overflow: hidden; 
+        /* font-size: 1vw; */
+         margin-bottom: 20px;
+  
+    }
+        th, td {
+
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+
+    thead{
+        color: #22316C;
+    }
+    tbody tr:nth-child(even) {
+        background-color: #f2f2f2; /* Alternating row color for nested-table */
+    }
+        }
+
+    </style>
+
+<main class="mac">
+    <h1>Members of Academic Council</h1>
+
+    <h2>Academic Council Members</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>S.No</th>
+                <th>Name</th>
+                <th>Designation</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Prof. S. Rajani</td>
+                <td>Chairperson, Principal, Gayatri Vidya Parishad College for Degree and PG Courses</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Prof. P. Srinivasa Rao</td>
+                <td>Special Invitee, President, Gayatri Vidya Parishad</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Sri. D. Dakshina Murty</td>
+                <td>Special Invitee, Vice President, Gayatri Vidya Parishad</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Prof. K.P.R. Sastry</td>
+                <td>Special Invitee, Vice President, Gayatri Vidya Parishad</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Prof. P. Somaraju</td>
+                <td>Special Invitee, Secretary, Gayatri Vidya Parishad</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>Sri. V. R. K. S. Siva Prasad</td>
+                <td>Special Invitee, Treasurer, Gayatri Vidya Parishad</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>Prof. V.S.R.Krishna Prasad</td>
+                <td>Special Invitee, Member, Gayatri Vidya Parishad</td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>Prof. P. V. Sarma</td>
+                <td>Special Invitee, Member, Gayatri Vidya Parishad</td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>Prof. V.S.R.K. Prasad</td>
+                <td>Special Invitee, Member, Gayatri Vidya Parishad</td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td>Dr. B. Subba Rao</td>
+                <td>Special Invitee, Member, Gayatri Vidya Parishad</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <h2>All Heads of the UG Departments</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>S.No</th>
+                <th>Name</th>
+                <th>Department</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Dr. G. Vijaya Lakshmi</td>
+                <td>Department of English</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Dr. U.V.S.S. Sastry</td>
+                <td>Department of Telugu</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Dr. K. Anitha</td>
+                <td>Department of Hindi</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Dr. V. Venkateswara Sarma</td>
+                <td>Department of Sanskrit</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Sri. M.P.R. Murthy</td>
+                <td>Department of Mathematics</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>Dr. P.D. Lavanya</td>
+                <td>Department of Physics</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>Sri. K. Ravi Prasad</td>
+                <td>Department of Chemistry</td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>Sri. K. Krishna Kumar</td>
+                <td>Department of Computer Science</td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>Dr. D. Sridevi</td>
+                <td>Department of Electronics</td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td>Dr. P. Srinivasa Rao</td>
+                <td>Department of Statistics</td>
+            </tr>
+            <tr>
+                <td>11</td>
+                <td>Dr. L. Sujatha</td>
+                <td>Department of Microbiology</td>
+            </tr>
+            <tr>
+                <td>12</td>
+                <td>Dr. Hephzibah Rani Singh</td>
+                <td>Department of Biotechnology</td>
+            </tr>
+            <tr>
+                <td>13</td>
+                <td>Dr. Ilahi Shaik</td>
+                <td>Department of Biochemistry</td>
+            </tr>
+            <tr>
+                <td>14</td>
+                <td>Dr. G. Lakshmi Narayana</td>
+                <td>Department of Environment Education</td>
+            </tr>
+            <tr>
+                <td>15</td>
+                <td>Sri. K. Gowri Sankar</td>
+                <td>Department of Commerce</td>
+            </tr>
+            <tr>
+                <td>16</td>
+                <td>Prof. P.V.Mohini</td>
+                <td>Department of B.B.A and B.B.A Digital marketing</td>
+            </tr>
+            <tr>
+                <td>17</td>
+                <td>Sri. P. Venkata Rao</td>
+                <td>Department of B.C.A & B.Sc Data Science</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <h2>All Heads of the PG Departments</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>S.No</th>
+                <th>Name</th>
+                <th>Department</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Prof. K.S.Bose</td>
+                <td>Department of M.B.A. and MBA Business Analytics</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Prof. I.S.Pallavi</td>
+                <td>Department of M.C.A.</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Dr. A.V. Joga Rao</td>
+                <td>Department of M.H.R.M</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Prof. I.S.Pallavi</td>
+                <td>Department of M.Sc Computer Science</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Prof. P. Uma Devi</td>
+                <td>Department of M.Sc Organic Chemistry</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <h2>All Heads of the B.Tech Engineering and Technology Programmes</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>S.No</th>
+                <th>Name</th>
+                <th>Department</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Dr. S. Rajesh</td>
+                <td>Department of Basic Sciences and Humanities</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Prof. P. Jyotsna Devi</td>
+                <td>Department of Civil Engineering</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Prof. N.V.Ramana Murty</td>
+                <td>Department of CSE and CSE (AI&ML)</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Dr. A. Nageswara Rao</td>
+                <td>Department of ECE</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Dr. Ch. Himagireesh</td>
+                <td>Department of Mechanical Engg</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <h2>Faculty of the M.Tech Engineering and Technology Programmes</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>S.No</th>
+                <th>Name</th>
+                <th>Department</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Prof. P. Jyotsna Devi</td>
+                <td>Department of Civil Engineering</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Prof. N.V.Ramana Murty</td>
+                <td>Department of Computer Science and Technology (CST)</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <h2>Teachers of the College Representing Different Categories</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>S.No</th>
+                <th>Name</th>
+                <th>Designation</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Prof. P.V.Vinay</td>
+                <td>I/c Director, Engineering & Technology Programs and Dean, Academic Affairs</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Dr. A. Anand</td>
+                <td>Director, UG Courses</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Dr. A. Sairoop</td>
+                <td>DEAN, Student Affairs</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Prof. K.V.V.Murali Someswara Rao</td>
+                <td>Controller of Examinations</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Sri. D. Giridhar</td>
+                <td>DEAN, Career Guidance and Training Placements</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <h2>Experts from Outside of the College</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>S.No</th>
+                <th>Name</th>
+                <th>Designation</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Prof. V. Balamohan Das</td>
+                <td>Former Vice Chancellor, Acharya Nagarjuna University</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Dr. I. Vijaya Babu</td>
+                <td>Principal, Dr. V. S. Krishna Govt Degree College</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Mr. K. Nagesh</td>
+                <td>General Manager - HR, HPCL, Visakha Refinery, Visakhapatnam</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Mr. G. Prasad Reddy</td>
+                <td>Deputy General Manager, MSME Technology Centre, Visakhapatnam</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Dr. Bijay Kumar Sahu</td>
+                <td>Sr. Manager & Officer Incharge, National Research Development Corporation</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <h2>Three Nominees of the University</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>S.No</th>
+                <th>Name</th>
+                <th>Department</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Prof. P. Shyamala</td>
+                <td>Dept of Chemistry, College of Science & Technology, Andhra University</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Prof. PDN Srinivasu</td>
+                <td>Department of Mathematics, College of Science & Technology, Andhra University</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Prof. G. Naga Raja</td>
+                <td>Department of Economics, College of Arts & Commerce, Andhra University</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <h2>Member Secretary</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>S.No</th>
+                <th>Name</th>
+                <th>Designation</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Prof. P.V.Vinay</td>
+                <td>I/c Director, Engineering & Technology Programs, Gayatri Vidya Parishad College for Degree and PG Courses(A)</td>
+            </tr>
+        </tbody>
+    </table>
+</main>
+`;
+            }
+             else {
                 contentDiv.innerHTML = '<h1>Welcome to GVP</h1><p>Please select a valid section.</p>';
             }
         }
