Update about.html links and restructure trash.html for improved content presentation and layout

--- a/about.html
+++ b/about.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GVPCDPGC | ABOUT</title>
-    <section id="preloader-placeholder"></section>
     <script src="./templates/includeHTML.js" defer></script>
     <link rel="stylesheet" href="./templates/preloder.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
- 
+    <section id="preloader-placeholder"></section>
     <style>
       *{
     font-family: "inter",sans-serif;
@@ -335,8 +334,8 @@ g:hover .image-mapper-shape {
     }
     </style>
   </head>
-  <body>
-    <section id="preloader-placeholder"></section>
+  <body id="main-content">
+    <!-- <section id="preloader-placeholder"></section> -->
     <header id="nav-placeholder"></header>
     <main >
       <div class="page1">
@@ -557,14 +556,15 @@ g:hover .image-mapper-shape {
         <a href=" " class="link-box"> Governing Body</a>
         <a href="./Adminstration/administration.html" class="link-box"> Administration</a>
         <a href="./gvp.html?page=Academic_Council" class="link-box"> Academic Council</a>
-        <a href="" class="link-box"> Strategic Plan</a>
-        <a href="" class="link-box"> Organizational Structure</a>
-        <a href="" class="link-box"> Governance and Policies</a>
-        <a href="" class="link-box"> Committees</a>
+        <a href="./gvp.html?page=Strategic_Plan" class="link-box"> Strategic Plan</a>
+        <a href="https://www.gvpcdpgc.edu.in/about/Organogram.pdf" class="link-box"> Organizational Structure</a>
+        <a href="./gvp.html?page=Governance_and_Policies" class="link-box"> Governance and Policies</a>
+        <a href="./gvp.html?page=Committees" class="link-box"> Committees</a>
       </div>
   </main>
     <footer id="footer-placeholder"></footer>
-    <script src="./templates/preloader.js"></script>
+   
   </body>
+  <script src="./templates/preloader.js"></script>
 </html>
 
