--- a/trash.html
+++ b/trash.html
@@ -1,57 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strategic Plan</title>
+<title>List of Policies</title>
     <style>
-        body {
-            width: 100%;
+        .loc {
             background-color: white;
             color: #22316c;
             font-family: Arial, sans-serif;
             line-height: 1.6;
-            display: flex;
-            justify-content: center; /* Center horizontally */
-            /* align-items: center; Center vertically */
+            padding: 0 0 0 5%;
             height: 100vh; /* Full height of the viewport */
             margin: 0; /* Remove default margin */
-        }
-        .content {
-            text-align: center; /* Center text alignment */
-        }
+        
         h1 {
             color: #22316c;
             margin-bottom: 20px; /* Add spacing below the heading */
         }
-        .strategic-plan {
-            width: 100%;
-            max-width: 700px;
-            margin-top: 20px;
+        ul {
+            list-style-type: none; /* Remove bullet points */
+            padding: 0; /* Remove default padding */
         }
-        .plan-link {
-            display: block;
-            margin: 10px 0;
-            text-decoration: none;
-            color: #22316c;
-            border: 1px solid #22316c;
-            padding: 10px;
-            text-align: center;
-            border-radius: 5px;
-            transition: background-color 0.3s;
+        ul{
+            display: flex;
+            flex-direction: column;
+            text-align: left;
+            list-style-type: "- ";
         }
-        .plan-link:hover {
-            background-color: #f0f0f0;
+        li {
+            margin: 10px 0; /* Add spacing between list items */
+            font-size: 18px; /* Increase font size for readability */
         }
+        a {
+            text-decoration: none; /* Remove underline from links */
+            color: #22316c; /* Link color */
+        }
+        a:hover {
+            text-decoration: underline; /* Underline on hover */
+        }}
     </style>
 </head>
-<body>
+<main class="loc">
     <div class="content">
-        <h1>Strategic Plan</h1>
-        <div class="strategic-plan">
-            <a href="#" class="plan-link">Strategic Plan 2021-2026</a>
-            <a href="#" class="plan-link">Strategic Plan 2015-2020</a>
-        </div>
+        <h1>LIST OF COMMITTEES</h1>
+        <ul>
+            <li><a href="#" target="_blank">Academic Planning Committee ↗</a></li>
+            <li><a href="#" target="_blank">Training Placement Career Guidance Committee ↗</a></li>
+            <li><a href="#" target="_blank">Research Development Committee ↗</a></li>
+            <li><a href="#" target="_blank">Library Committee ↗</a></li>
+            <li><a href="#" target="_blank">Alumni Committee ↗</a></li>
+            <li><a href="#" target="_blank">Capacity Building Among SC-ST Students ↗</a></li>
+            <li><a href="#" target="_blank">Grievance Redressal Committee ↗</a></li>
+            <li><a href="#" target="_blank">Internal Complaints Committee (ICC) ↗</a></li>
+            <li><a href="#" target="_blank">IQAC Committee ↗</a></li>
+            <li><a href="#" target="_blank">Anti Ragging Committee ↗</a></li>
+            <li><a href="#" target="_blank">IIC (Institution Innovation Council) ↗</a></li>
+            <li><a href="#" target="_blank">Finance Committee ↗</a></li>
+            <li><a href="#" target="_blank">Canteen Committee ↗</a></li>
+            <li><a href="#" target="_blank">Minority Cell ↗</a></li>
+            <li><a href="#" target="_blank">OBC Cell ↗</a></li>
+            <li><a href="#" target="_blank">Intellectual Property Rights Cell ↗</a></li>
+            <li><a href="#" target="_blank">Sports Committee ↗</a></li>
+            <li><a href="#" target="_blank">Extension Activities Committee ↗</a></li>
+            <li><a href="#" target="_blank">Industry Institute Partnership Cell (IIPC) Committee ↗</a></li>
+            <li><a href="#" target="_blank">Website Development and Maintenance Committee ↗</a></li>
+            <li><a href="#" target="_blank">Entrepreneurship Committee ↗</a></li>
+            <li><a href="#" target="_blank">Disciplinary Committee ↗</a></li>
+            <li><a href="#" target="_blank">Academic Bank of Credits Committee ↗</a></li>
+            <li><a href="#" target="_blank">Literary and Cultural Committee ↗</a></li>
+            <li><a href="#" target="_blank">Admission Committee ↗</a></li>
+            <li><a href="#" target="_blank">Examination Committee ↗</a></li>
+            <li><a href="#" target="_blank">Civil Works and Maintenance Committee ↗</a></li>
+        </ul>
     </div>
-</body>
-</html>
+</main>
