Add financial information title to GVP page content rendering

--- a/gvp.html
+++ b/gvp.html
@@ -857,6 +857,9 @@
 </main>
 `;
             }
+            else if(page === 'Finance'){
+                contentDiv.innerHTML = `     <title>Financial Information</title>`;}
+                
              else {
                 contentDiv.innerHTML = '<h1>Welcome to GVP</h1><p>Please select a valid section.</p>';
             }
