Update image formats and improve navigation links in various templates

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       }
       .page1{
         width: 100%;
-        background-image: url("/assects/home.png");
+        background-image: url("/assects/home.webp");
         background-repeat: no-repeat;
         background-position: center;
         background-clip: content-box;
